# audioWaveFormFlutter

./: .gitignore  .travis.yml  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/audiowaveformFlutter/: AudiowaveformFlutterPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/audiowaveformFlutter_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/test_driver/: app.dart  app_test.dart
ios/: audiowaveformFlutter.podspec
ios/Classes/: AudiowaveformFlutterPlugin.h  AudiowaveformFlutterPlugin.m  SwiftAudiowaveformFlutterPlugin.swift  interact_with_audiowaveform.cpp  library.cpp  library.h  minimp3.h  minimp3_ex.h
lib/: audiowaveformFlutter.dart
test/: audiowaveformFlutter_test.dart
